# polymarket-mcp

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  api.rst  architecture.md  architecture.rst  conf.py  development.md  development.rst  index.md  index.rst  release.md  release.rst  requirements.txt  usage.md  usage.rst
docs/_static/: custom.css
src/polymarket_mcp/: __init__.py  errors.py  http.py  server.py  settings.py
src/polymarket_mcp/models/: __init__.py  clob.py  data.py  gamma.py
src/polymarket_mcp/servers/: __init__.py  clob_public_server.py  data_server.py  gamma_server.py
src/polymarket_mcp/services/: __init__.py  clob_public.py  data.py  gamma.py
tests/: __init__.py  conftest.py  test_clob_service.py  test_data_service.py  test_gamma_service.py  test_mcp_e2e.py  test_models.py  test_server_composition.py  test_settings_and_errors.py
tests/helpers/: __init__.py  fake_fastmcp.py  run_mocked_server.py  run_real_server.py
