[project]
name = "polymarket-mcp-server"
version = "0.1.2"
description = "Typed FastMCP server for Polymarket discovery, wallet reads, and public CLOB market data."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "OpenAI" }
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
docs = [
  "sphinx>=8.0.0",
  "furo>=2024.8.6",
  "sphinx-autodoc-typehints>=2.5.0",
]

[project.urls]
Documentation = "https://polymarket-mcp.readthedocs.io/en/latest/"
Repository = "https://github.com/pr1m8/polymarket-mcp"
Issues = "https://github.com/pr1m8/polymarket-mcp/issues"
Releases = "https://github.com/pr1m8/polymarket-mcp/releases"

[project.scripts]
polymarket-mcp = "polymarket_mcp.server:main"

[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/polymarket_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.pdm.scripts]
test = "pytest"
test-mcp = "pytest tests/test_mcp_e2e.py"
test-cov = "pytest --cov=src/polymarket_mcp --cov-report=term-missing"
docs = "env LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 sphinx-build -W --keep-going -b html docs docs/_build/html"
docs-clean = "python -c \"import shutil; shutil.rmtree('docs/_build', ignore_errors=True)\""
docs-serve = "python -m http.server 8000 -d docs/_build/html"

mcp-run = "fastmcp run src/polymarket_mcp/server.py:mcp"
mcp-dev = "fastmcp dev inspector src/polymarket_mcp/server.py:mcp"
mcp-inspect = "fastmcp inspect src/polymarket_mcp/server.py:mcp"
mcp-inspect-json = "fastmcp inspect src/polymarket_mcp/server.py:mcp --format fastmcp"
mcp-inspect-mcp = "fastmcp inspect src/polymarket_mcp/server.py:mcp --format mcp -o .artifacts/polymarket-mcp.json"

mcp-gamma-run = "fastmcp run src/polymarket_mcp/servers/gamma_server.py:mcp"
mcp-data-run = "fastmcp run src/polymarket_mcp/servers/data_server.py:mcp"
mcp-clob-run = "fastmcp run src/polymarket_mcp/servers/clob_public_server.py:mcp"

mcp-gamma-inspect = "fastmcp inspect src/polymarket_mcp/servers/gamma_server.py:mcp"
mcp-data-inspect = "fastmcp inspect src/polymarket_mcp/servers/data_server.py:mcp"
mcp-clob-inspect = "fastmcp inspect src/polymarket_mcp/servers/clob_public_server.py:mcp"

check = { composite = ["test", "mcp-inspect"] }
all = { composite = ["test", "docs", "mcp-inspect"] }

[tool.coverage.run]
source = ["src/polymarket_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
